refactor navbar layout for improved styling and alignment

--- a/Scotter-Renting-Website/src/app/navbar/navbar.component.html
+++ b/Scotter-Renting-Website/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="flex bg-[#FFFCF9] justify-start items-center m-5">
-    <div>   <svg width="92" height="115" viewBox="0 0 92 115" fill="none" xmlns="http://www.w3.org/2000/svg">
+<div class="flex bg-[#FFFCF9] justify-start items-center">
+    <div class="p-[0.5rem] ml-20" >   <svg width="92" height="115" viewBox="0 0 92 115" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M46 92C71.4051 92 92 71.4051 92 46C92 20.5949 71.4051 0 46 0C20.5949 0 0 20.5949 0 46C0 71.4051 20.5949 92 46 92Z" fill="#FFFAE4"/>
         <path d="M86 34H6C10.9462 16.6855 26.9857 4 46 4C65.0143 4 81.0538 16.6855 86 34Z" fill="black"/>
         <path d="M88 45.5C88 49.4843 87.4478 53.3417 86.4069 57H5.5931C4.55216 53.3417 4 49.4843 4 45.5C4 41.5157 4.55216 37.6583 5.5931 34H86.4069C87.4478 37.6583 88 41.5157 88 45.5Z" fill="#EF8D21"/>
@@ -54,7 +54,7 @@
         <path d="M13.234 94.5804C14.4828 94.3364 15.7406 94.1737 16.9894 94.0291C18.2383 93.8935 19.4961 93.7759 20.7449 93.6946C21.9937 93.6132 23.2515 93.55 24.5004 93.5229C25.7492 93.4957 27.007 93.4957 28.2558 93.568C27.007 93.8121 25.7492 93.9748 24.5004 94.1194C23.2515 94.255 21.9937 94.3725 20.7449 94.4539C19.4961 94.5352 18.2383 94.5985 16.9894 94.6256C15.7406 94.6527 14.4828 94.6618 13.234 94.5804Z" fill="black"/>
         </svg></div>
         
-    <ul class="flex">
+    <ul class="flex justify-center items-center w-full">
        
         <li>Home</li>
         <li>Services</li>
