refactor navbar component structure for improved HTML semantics

--- a/Scotter-Renting-Website/src/app/navbar/navbar.component.html
+++ b/Scotter-Renting-Website/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="flex bg-[#FFFCF9] justify-between items-center">
    
-    <div class="p-[0.5rem] ml-20" >   <svg width="92" height="115" viewBox="0 0 92 115" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <div class="p-[0.5rem] ml-20" >   <svg width="62" height="92" viewBox="0 0 92 115" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M46 92C71.4051 92 92 71.4051 92 46C92 20.5949 71.4051 0 46 0C20.5949 0 0 20.5949 0 46C0 71.4051 20.5949 92 46 92Z" fill="#FFFAE4"/>
         <path d="M86 34H6C10.9462 16.6855 26.9857 4 46 4C65.0143 4 81.0538 16.6855 86 34Z" fill="black"/>
         <path d="M88 45.5C88 49.4843 87.4478 53.3417 86.4069 57H5.5931C4.55216 53.3417 4 49.4843 4 45.5C4 41.5157 4.55216 37.6583 5.5931 34H86.4069C87.4478 37.6583 88 41.5157 88 45.5Z" fill="#EF8D21"/>
@@ -59,11 +59,11 @@
         <li class="ml-10" >Home</li>
         <li class="ml-10" >Services</li>
         <li class="ml-10" >Contact Us</li>
-        <div class="flex justify-end items-center">
+    </ul>
+        <ul class="flex justify-end items-center">
             <li class="ml-10">Login</li>
             <li class="ml-10">Book Scooter</li>
-        </div>
-    </ul>
+        </ul>
   
 
 </div>
