refactor navbar component for improved styling and alignment

--- a/Scotter-Renting-Website/src/app/navbar/navbar.component.html
+++ b/Scotter-Renting-Website/src/app/navbar/navbar.component.html
@@ -54,15 +54,15 @@
         <path d="M63.7351 91.218C64.984 90.9739 66.2418 90.8112 67.4906 90.6666C68.7394 90.531 69.9972 90.4135 71.2461 90.3322C72.4949 90.2508 73.7527 90.1875 75.0015 90.1604C76.2504 90.1333 77.5082 90.1333 78.757 90.2056C77.5082 90.4497 76.2504 90.6124 75.0015 90.757C73.7527 90.8926 72.4949 91.0101 71.2461 91.0914C69.9972 91.1728 68.7394 91.236 67.4906 91.2632C66.2418 91.2903 64.993 91.2903 63.7351 91.218Z" fill="black"/>
         <path d="M13.234 94.5804C14.4828 94.3364 15.7406 94.1737 16.9894 94.0291C18.2383 93.8935 19.4961 93.7759 20.7449 93.6946C21.9937 93.6132 23.2515 93.55 24.5004 93.5229C25.7492 93.4957 27.007 93.4957 28.2558 93.568C27.007 93.8121 25.7492 93.9748 24.5004 94.1194C23.2515 94.255 21.9937 94.3725 20.7449 94.4539C19.4961 94.5352 18.2383 94.5985 16.9894 94.6256C15.7406 94.6527 14.4828 94.6618 13.234 94.5804Z" fill="black"/>
         </svg></div>
-    <ul class="flex justify-center items-center">
+    <ul class="flex justify-center items-center font-semibold ml-28">
        
         <li class="ml-10" >Home</li>
         <li class="ml-10" >Services</li>
         <li class="ml-10" >Contact Us</li>
     </ul>
-        <ul class="flex justify-end items-center">
+        <ul class="flex justify-end items-center mr-28 font-semibold ">
             <li class="ml-10">Login</li>
-            <li class="ml-10">Book Scooter</li>
+            <li class="ml-10 text-white book-btn">Book Scooter</li>
         </ul>
   
 
