add active state styling to navbar items and introduce book button styles

--- a/Scotter-Renting-Website/src/app/navbar/navbar.component.html
+++ b/Scotter-Renting-Website/src/app/navbar/navbar.component.html
@@ -56,7 +56,7 @@
         </svg></div>
     <ul class="flex justify-center items-center font-semibold ml-28">
        
-        <li class="ml-10" >Home</li>
+        <li class="ml-10 active" >Home</li>
         <li class="ml-10" >Services</li>
         <li class="ml-10" >Contact Us</li>
     </ul>
