add home component with layout and styling

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container flex bg-[#FFFCF9] w-full h-[85vh]">
+    <div class="left w-[50%] h-full bg-[#FFFCF9]">
+       this is left
+    </div>
+    <div class="right w-[50%] h-full bg-[#FFFCF9]">
+     <div class="clipy-circle"></div>
+    </div>
+</div>
