--- a/Scotter-Renting-Website/src/app/home/home.component.scss
+++ b/Scotter-Renting-Website/src/app/home/home.component.scss
@@ -1,3 +1,29 @@
-*{
-    background-color: #FFFCF9;
+.clipy-circle{
+    border-radius: 31% 69% 41% 59% / 56% 42% 58% 44%;
+    width: 55%;
+    height: 55%;
+    background-color: #EF8D21;
+    color: white;
+    display: flex
+;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    position: relative;
+    top: 30%;
+    z-index: 1;
+
+
+
+}
+.person{
+    z-index: 5;
+    position: absolute;
+    top: -20px;
+    transform: translateX(-50%);
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    top: 12%;
+    right: 9%;
 }
