fix: add missing newline in home component HTML

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -28,5 +28,7 @@
         </div>
      <div class="clipy-circle"></div>
     </div>
-    <div class="right-leaf"></div>
+    <div class="right-leaf">
+        
+    </div>
 </div>
