add: enhance home component layout with new elements and styling

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="container flex bg-[#FFFCF9] w-full h-[85vh]">
     <div class="left w-[50%] h-full bg-[#FFFCF9]">
-       this is left
+        this is left
     </div>
+    <div class="text">Starting From</div>
     <div class="right w-[50%] h-full bg-[#FFFCF9]">
+        <div class="circle"></div>
         <div class="person">
             <svg width="249" height="600" viewBox="0 0 249 600" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g filter="url(#filter0_d_8_89)">
@@ -29,6 +31,6 @@
      <div class="clipy-circle"></div>
     </div>
     <div class="right-leaf">
-        
+        <img src="/assets/image.png" alt="">
     </div>
 </div>
