add: update left section of home component with new content and layout

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -1,6 +1,11 @@
 <div class="container flex bg-[#FFFCF9] w-full h-[85vh]">
     <div class="left w-[50%] h-full bg-[#FFFCF9]">
-        this is left
+        <div class="flex flex-col items-center justify-center h-full">
+            <div>Fair price ride</div>
+            <div>Rent our Scooter</div>
+            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+        </div>
+      
     </div>
     <div class="right w-[50%] h-full bg-[#FFFCF9]">
         <div class="text font-bold">Starting From
