fix: remove unnecessary whitespace and add comment for right panel in home component

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -5,8 +5,9 @@
             <div>Rent our Scooter</div>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
         </div>
-      
+    
     </div>
+    <!-- Right panal -->
     <div class="right w-[50%] h-full bg-[#FFFCF9]">
         <div class="text font-bold">Starting From
 
