add: enhance text styling in left section of home component

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container flex bg-[#FFFCF9] w-full h-[85vh]">
     <div class="left w-[50%] h-full bg-[#FFFCF9]">
         <div class="flex flex-col justify-center h-full ml-24">
-            <div>Fair price ride</div>
-            <div>Rent our Scooter</div>
+            <div class="text-[#364547] text-[4rem]">Fair price ride</div>
+            <div class="font-extrabold text-[#364547]">Rent our <span class="text">Scooter</span> </div>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
         </div>
     
