--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="left w-[50%] h-full bg-[#FFFCF9]">
         <div class="flex flex-col justify-center h-full ml-24">
             <div class="text-[#364547] text-[4rem]">Fair price ride</div>
-            <div class="font-extrabold text-[#364547]">Rent our <span class="text">Scooter</span> </div>
+            <div class="font-extrabold text-[#364547]">Rent our <span class="text-[#EF8D21]">Scooter</span> </div>
             <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
         </div>
     
