add: update home component layout and styling with new content and circular design element

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -1,9 +1,19 @@
 <div class="container flex bg-[#FFFCF9] w-full h-[85vh]">
-    <div class="left w-[50%] h-full bg-[#FFFCF9]">
-        <div class="flex flex-col justify-center h-full ml-24">
-            <div class="text-[#364547] text-[4rem]">Fair price ride</div>
-            <div class="font-extrabold text-[#364547]">Rent our <span class="text-[#EF8D21]">Scooter</span> </div>
-            <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+    <div class="left w-[50%] h-[80vh] bg-[#FFFCF9]">
+        <div class="circle1"></div>
+        <div class="flex flex-col justify-center h-full ml-24 z-10 relative">
+
+            <div class="text-[#364547] text-[3rem]">Fair price ride</div>
+            <div class="font-extrabold text-[#364547] text-[5rem]">Rent our <span class="text-[#EF8D21]">Scooter</span> </div>
+            <p class="text-[#364547] tracking-[2px]">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <div class="bg-white">
+<ul>
+    <li>Location</li>
+    <li>Pickup Date</li>
+    <li>Kilometers</li>
+    <li>Book Scooter</li>
+</ul>
+            </div>
         </div>
     
     </div>
