--- a/Scotter-Renting-Website/src/app/home/home.component.scss
+++ b/Scotter-Renting-Website/src/app/home/home.component.scss
@@ -37,6 +37,16 @@
     right: 25%;
     z-index: 1;
 }
+.circle1{
+    border-radius: 50%;
+    height: 17rem;
+    width: 18rem;
+    border: 4rem solid #F7F4F2;
+    top: 36%;
+    position: absolute;
+    z-index: 1;
+    margin-left: 2rem;
+}
 .text{
     position: absolute;
     top: 22%;
