fix: update layout and styling of info section in home component for improved presentation

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -6,8 +6,8 @@
             <div class="text-[#364547] text-[3rem]">Fair price ride</div>
             <div class="font-extrabold text-[#364547] text-[5rem]">Rent our <span class="text-[#EF8D21]">Scooter</span> </div>
             <p class="text-[#364547] tracking-[2px]">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-            <div class="bg-white">
-<ul>
+            <div class="bg-white p-3 info">
+<ul class="flex justify-between items-center">
     <li>Location</li>
     <li>Pickup Date</li>
     <li>Kilometers</li>
