--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -8,7 +8,7 @@
             <p class="text-[#364547] tracking-[2px]">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
             <div class="bg-white p-3 info">
 <ul class="flex justify-between items-center">
-    <li>Location</li>
+    <li>Location  <span class="vertical-line"></span></li>
     <li>Pickup Date</li>
     <li>Kilometers</li>
     <li>Book Scooter</li>
