--- a/Scotter-Renting-Website/src/app/home/home.component.scss
+++ b/Scotter-Renting-Website/src/app/home/home.component.scss
@@ -53,3 +53,12 @@
     right: 7%;
     font-size: 23px;
 }
+.info{
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 1rem;
+}
+.vertical-line{
+    border-left: 2px solid #EF8D21;
+   
+}
