--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -6,7 +6,7 @@
             <div class="text-[#364547] text-[3rem]">Fair price ride</div>
             <div class="font-extrabold text-[#364547] text-[5rem]">Rent our <span class="text-[#EF8D21]">Scooter</span> </div>
             <p class="text-[#364547] tracking-[2px]">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-            <div class="bg-white p-3 info">
+            <div class="bg-white p-3 info color" >
 <ul class="flex justify-between items-center">
     <li>Location  <span class="vertical-line"></span></li>
     <li>Pickup Date</li>
