fix: enhance layout and styling of home component with vertical lines and updated booking button

--- a/Scotter-Renting-Website/src/app/home/home.component.html
+++ b/Scotter-Renting-Website/src/app/home/home.component.html
@@ -8,10 +8,13 @@
             <p class="text-[#364547] tracking-[2px]">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
             <div class="bg-white p-3 info text-[#9E9E9E]" >
 <ul class="flex justify-between items-center">
-    <li>Location  <span class="vertical-line"></span></li>
+    <li>Location </li>
+    <li class="vertical-line"></li>
     <li>Pickup Date</li>
+    <li class="vertical-line"></li>
+
     <li>Kilometers</li>
-    <li>Book Scooter</li>
+    <li class="booking">Book Scooter</li>
 </ul>
             </div>
         </div>
