--- a/Scotter-Renting-Website/src/app/home/home.component.scss
+++ b/Scotter-Renting-Website/src/app/home/home.component.scss
@@ -57,8 +57,19 @@
     border-radius: 20px;
     padding: 20px;
     margin-top: 1rem;
+    box-shadow: 0 7px 5px#9E9E9E;
+
 }
 .vertical-line{
-    border-left: 2px solid #EF8D21;
+    border-left: 2px solid #9E9E9E;
+    height: 25px;
    
+}
+.booking{
+    border: 3px solid black;
+    border-radius: 20px;
+    padding: 10px;
+    color: black;
+    box-shadow: 0 7px 5px#EF8D21;
+    
 }
